5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1593_1801.log
== TEST (2019-03-26 11:31:01) 
-- CODE:
a = input("frase:+Abra + (-nome do objeto)")
n = int(input("numero de vezes: "))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:45) 
-- CODE:
a = input("frase:+Abra + (-nome do objeto)")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:32:34) 
-- CODE:
a = input("frase:+Abra +  (-nome do objeto)")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:04) 
-- CODE:
a = input("frase:+Abra + ( -nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:28) 
-- CODE:
a = input("frase:+(Abra) + ( -nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:45) 
-- CODE:
a = input("frase:+(Abra) + ( - nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:34:22) 
-- CODE:
a = input("frase:+ ( Abra) + ( - nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:34:54) 
-- CODE:
a = input("frase:( Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:35:32) 
-- CODE:
a = input("frase:(  Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:35:51) 
-- CODE:
a = input("frase:(+ Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:37:25) 
-- CODE:
a = input("frase:(+ Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- EXECUTION TIME:
0.151704
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:38:39) 
-- CODE:
a = input("frase:(+ Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:38:49) 
-- CODE:
a = input("frase:( +Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:39:07) 
-- CODE:
a = input("frase:( +Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- EXECUTION TIME:
0.187159
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:39:09) 
-- CODE:
a = input("frase:( +Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:40:42) 
-- CODE:
a = input("frase:( + Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:40:46) 
-- CODE:
a = input("frase:( + Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- EXECUTION TIME:
0.163341
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:40:49) 
-- CODE:
a = input("frase:( + Abra) + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:41:13) 
-- CODE:
a = input("frase: + Abra + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:41:30) 
-- CODE:
a = input("frase: +Abra + (- nome do objeto )")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:42:50) 
-- CODE:
a = input("frase:" Abra "+nome do objeto ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase:" Abra "+nome do objeto ")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:42:58) 
-- CODE:
a = input("frase: " Abra "+nome do objeto ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase: " Abra "+nome do objeto ")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:01:30) 
-- CODE:
a = input("frase: Abra + nome do objeto ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:02:34) 
-- CODE:
a = input("frase: "Abra" + "nome do objeto" ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase: "Abra" + "nome do objeto" ")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:02:42) 
-- CODE:
a = input("frase: Abra" + "nome do objeto" ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase: Abra" + "nome do objeto" ")
                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:03:35) 
-- CODE:
a = input("frase:(Abra + (nome do objeto) ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:04:14) 
-- CODE:
a = input("frase: "Abra" + nome do objeto ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase: "Abra" + nome do objeto ")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:04:42) 
-- CODE:
a = input("frase: + nome do objeto ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:05:02) 
-- CODE:
a = input("frase: + nome do objeto ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:05:41) 
-- CODE:
a = input("frase: +nome do objeto ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:06:37) 
-- CODE:
a = input("frase: *nome do objeto ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:07:15) 
-- CODE:
a = input("frase: *nome do objeto ")
n = int(input("numero de vezes: "))

total = (a) * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:07:36) 
-- CODE:
a = input("frase: ")
n = int(input("numero de vezes: "))

total = (a) * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:07:54) 
-- CODE:
a = input("frase: + ")
n = int(input("numero de vezes: "))

total = (a) * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:08:14) 
-- CODE:
a = input("frase+: ")
n = int(input("numero de vezes: "))

total = (a) * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:08:38) 
-- CODE:
a = input("frase*: ")
n = int(input("numero de vezes: "))

total = (a) * n

print(total)
-- EXECUTION TIME:
0.147747
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:08:42) 
-- CODE:
a = input("frase*: ")
n = int(input("numero de vezes: "))

total = (a) * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:10:13) 
-- CODE:
a = input("frase: *")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:10:48) 
-- CODE:
a = input("frase:"" ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
frase: livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:11:04) 
-- CODE:
a = input("frase: +")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:12:53) 
-- CODE:
a = input("frase:abra"+ ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase:abra"+ ")
                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:12:56) 
-- CODE:
a = input("frase:abra"+ ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase:abra"+ ")
                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:13:01) 
-- CODE:
a = input("frase:abra" ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase:abra" ")
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:14:05) 
-- CODE:
a = input("abra" ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("abra" ")
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:14:29) 
-- CODE:
a = input("frase:abra+ ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:14:54) 
-- CODE:
a = input("frase:(abra+) ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:16:32) 
-- CODE:
a = input("frase:(abra+)" ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- ERROR:
File "XXXX", line 1
    a = input("frase:(abra+)" ")
                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:16:45) 
-- CODE:
a = input("frase:(abra)+ ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:16:59) 
-- CODE:
a = input("frase:(abra) + ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:17:20) 
-- CODE:
a = input("frase:+ ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:17:31) 
-- CODE:
a = input("frase: + ")
n = int(input("numero de vezes: "))

total = a * n

print(total)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:05:33) 
-- CODE:
a = input("frase:")
n = int(input("numero de vezes: "))

print((" Abra "+a)*n)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:05:47) 
-- CODE:
a = input("frase:")
n = int(input("numero de vezes: "))

print((" Abra "+a)*n)
-- EXECUTION TIME:
0.168464
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:45:34) 
-- CODE:
a = input("frase:")
n = int(input("numero de vezes: "))

print(("Abra"+a)*n)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:45:55) 
-- CODE:
a = input("frase:")
n = int(input("numero de vezes: "))

print((" Abra "+a)*n)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:46:11) 
-- CODE:
a = input("frase:")
n = int(input("numero de vezes: "))

print((" Abra "+a)*n)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:46:35) 
-- CODE:
a = input("frase:")
n = int(input("numero de vezes: "))

print(("Abra"+a)*n)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:47:05) 
-- CODE:
a = input("frase:")
n = int(input("numero de vezes: "))

print((" Abra " + a) * n)
-- EXECUTION TIME:
0.150118
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
